--- a/html/Machine Learning Notes.html
+++ b/html/Machine Learning Notes.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <link rel="Stylesheet" type="text/css" href="style.css" />
-        <title>Machine Learning Notes - Covi</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<title>Machine Learning Notes - Covi</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
 <body>
+
 <h1 id="toc_1">Machine Learning Notes</h1>
 
 <p>
@@ -16,10 +17,13 @@ Since Apr 2012 I have been taking Coursera.org's online Machine Learning course.
 <ul>
 <li>
 Logistic regression. (<a href="http://me.geotakucovi.com/logistic.html">html</a> | <a href="http://me.geotakucovi.com/logistic.pdf">pdf</a>)
-</li>
+
 <li>
 Regularization (for linear regression and logistic regression). (<a href="http://me.geotakucovi.com/regularization.pdf">pdf</a>)
-</li>
+
+<li>
+<a href="Issues in training models.html">Issues in training models</a>.
+
 </ul>
 
 <hr />
@@ -29,17 +33,4 @@ Last Modified: May 23, 2012 23:30:54
 </p>
 
 </body>
-
-<script src="http://geotakucovi.com/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  MathJax.Hub.Config({
-    extensions: ["tex2jax.js"],
-    jax: ["input/TeX","output/HTML-CSS"],
-    tex2jax: {
-        inlineMath: [["$","$"],["\\(","\\)"]],
-        displayMath: [ ['$$','$$'], ['\[','\]'] ],
-        processEscapes: true
-    }
-  });
-</script>
-
 </html>
