--- a/html/Issues in training models.html
+++ b/html/Issues in training models.html
@@ -7,25 +7,33 @@
 </head>
 <body>
 
-<pre>
-high bias = underfit
+<h1 id="toc_1">Issues in training models</h1>
+<pre high bias = underfit>
 J_train high, J_CV similar
 
 high variance = overfit
 J_train low, J_CV high
+</pre>
 
+<h2 id="toc_1.1">Selecting regularization parameter, lambda</h2>
+<p>
+Define:<br>
+J = the original cost function with regularization penalty term, used in training;<br>
+J_train = J_CV = J_test = cost function, used as `errors'.<br>
+</p>
 
-= Selecting regularization parameter \lambda =
-
-Define:
-J_train = the original cost function + regularization penalty term
-J_CV = J_test = original cost function
-
-Try different values of lambda and by minimizing J_train we obtain a set of optimal thetas, each corresponding to each lambda value.
+<p>
+Selection process:
+</p>
+<pre Try different values of lambda and by minimizing J we obtain a set of optimal thetas, each corresponding to each lambda value.>
 Try each optimal theta, select the one that minimizes J_CV. Thus, we obtain theta and lambda for our model.
 J_CV is an appropriate estimate for J_test.
-
 </pre>
+<hr />
+<p>
+Creation Date: Fri 08 Jun 2012 01:58:37 PM CST<br>
+Last Modified: Fri 08 Jun 2012 01:58:45 PM CST
+</p>
 
 </body>
 </html>
